Faraz's changes to ch 6

--- a/05_Ch_6_Eigenvalues_and_Eigenvectors/071-eigenvalues_eigenvectors.ipynb
+++ b/05_Ch_6_Eigenvalues_and_Eigenvectors/071-eigenvalues_eigenvectors.ipynb
@@ -67,15 +67,25 @@
     "\\end{align*}\n",
     ":::\n",
     "\n",
-    "Geometrically, when $A$ acts on an eigenvector $\\vv v$, it does not change its orientation: it only stretches it by th evalue specified by the eigenvalue $\\lambda$.\n",
     "\n",
-    "The question then becomes how do we find eigenvalues and eigenvectors for a given matrix $A$? \n",
+    "Geometrically, when $A$ acts on an eigenvector $\\vv v$, it does not change its orientation: it only stretches it by the value specified by the eigenvalue $\\lambda$. In a general sense, the eigenvectors and eigenvalues can be used to describe $A$ by indicating how it is \"stretching\" a vector space.\n",
+    "\n",
+    "Our study of eigenvalues and -vectors will begin with a discussion on how we find them.\n",
     "\n",
     "## Finding the eigenvectors for a known eigenvalue\n",
     "\n",
     "We'll first consider an easier problem.\n",
     "\n",
-    "Suppose we already know that $A$ has an eigenvalue $\\lambda$. Then, (EIG) is a linear system in $\\vv v$. Indeed, to find the eigenvectors corresponding to $\\lambda$, we just solve the homogenous linear system $(A - \\lambda I)\\vv v = \\vv 0$. We've already seen that the solution set is precisely the null space of $A - \\lambda i$, i.e., $(A - \\lambda I) = \\vv 0$ if and only if $\\vv v \\in \\text{Null}(A - \\lambda I)$. \n",
+    "Suppose we already know that $A$ has an eigenvalue $\\lambda$. Then, (EIG) is a linear system in $\\vv v$. If we isolate our vector $\\vv v$ by re-arranging terms, we get \n",
+    "\n",
+    "```{math}\n",
+    ":class: text-center\n",
+    ":nowrap:\n",
+    "(A - \\lambda I)\\mathbf{v} = \\mathbf{0}\n",
+    "\n",
+    "```\n",
+    "\n",
+    "This is a system we know how to solve. Specifically, the solution set is the null space of $A - \\lambda I$.\n",
     "\n",
     "````{exercise}  Finding eigenvectors\n",
     ":label: eigen-ex1\n",
@@ -117,20 +127,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Eigenvectors corresponding to lambda_1 = -3:\n",
-      "[[ 0.57735027  0.        ]\n",
-      " [ 0.57735027  0.70710678]\n",
-      " [-0.57735027  0.70710678]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np \n",
     "from scipy import linalg\n",
@@ -155,7 +154,9 @@
     "\n",
     "## ... But how do we find the eigenvalues?\n",
     "\n",
-    "The question, now, becomes how to find the eigenvalues of a matrix. A key observation is that the [definition of eigenvalue](#eigen-defn) require that the corresponding eigenvector be *nonzero*, and we know that this can only occur if $A - \\lambda I$ is singular! This discussion is summarized in the following theorem:\n",
+    "\n",
+    "\n",
+    "The question, now, becomes how to find the eigenvalues of a matrix. A key observation is that the [definition of eigenvalue](#eigen-defn) requires that the corresponding eigenvector be *nonzero*, and we know that this can only occur if $A - \\lambda I$ is singular! (Recall that non-singular matrices only have the $\\vv 0$ vector in the null-space). This discussion is summarized in the following theorem:\n",
     "\n",
     ":::{prf:theorem} A Characterization of the Eigenvalues of a Matrix\n",
     ":label: eigenvalue-thm\n",
@@ -163,7 +164,9 @@
     "A scalar $\\lambda$ is an eigenvalue of $A \\in\\mathbb{R}^{n\\times n}$ if and only if the matrix $A - \\lambda I$ is [singular](#singular-defn), i.e., $\\text{rank}(A - \\lambda I) < n$. The corresponding eigenvectors are the nonzero solutions to the eigenvalue equation $(A - \\lambda I) \\vv v = \\vv 0$.\n",
     ":::\n",
     "\n",
-    "This theorem gives us a plan of attack: to find all $\\lambda$ for which $A - \\lambda I$ is singular! In the next few sections, we'll introduce the machinery needed to apply this method, known as the method of characteristic equations, for finding eigenvalues of small matrices.\n",
+    "This theorem gives us a plan of attack: to find all $\\lambda$ for which $A - \\lambda I$ is singular! \n",
+    "\n",
+    "In the next few sections, we'll introduce the machinery needed to apply this method, known as the method of characteristic equations, for finding eigenvalues of small matrices. \n",
     "\n",
     "In general, this method is not applied for large matrices due to numerical issues. For larger matrices, an algorithm based on the QR decomposition is used; we'll cover this a few sections down the line."
    ]
@@ -192,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
