--- a/05_Ch_6_Eigenvalues_and_Eigenvectors/072-determinants.ipynb
+++ b/05_Ch_6_Eigenvalues_and_Eigenvectors/072-determinants.ipynb
@@ -71,27 +71,27 @@
     "1. The determinant of a matrix $A$, written $\\det A$ or $|A|$, is only defined if $A$ is square.\n",
     "\n",
     "2. The determinant of a $1\\times 1$ matirx $A = [a]$ is $\\det [a] = a$. The determinant of a $2 \\times 2$ matrix is $\\det \\bm a & b\\\\ c & d \\em= ad - bc$. You may recognize this expression from our formula for the inverse of a $2\\times 2$ matrix:\n",
-    "\\begin{align*}\n",
+    "\n",
+    "\n",
+    "```{math}\n",
+    ":class: text-center\n",
     "\\bm a & b\\\\c&d \\em^{-1} = \\frac{1}{ad -bc}\\bm d&-b\\\\-c&a \\em.\n",
-    "\\end{align*}\n",
     "\n",
-    "In this case, $\\bm a & b\\\\c&d \\em^{-1}$ exists if and only if $\\det \\bm a & b\\\\c&d \\em = ad - bc \\neq 0$. This observation is true in general:\n",
+    "```\n",
     "\n",
-    "3. $A^{-1}$ exists, i.e., $A$ is nonsingular, if and only if, $\\det A \\neq 0$.\n",
+    "3. In this case, $\\bm a & b\\\\c&d \\em^{-1}$ exists if and only if  $ad - bc \\neq 0$ i.e. $\\det \\bm a & b\\\\c&d \\em \\neq 0 $. This observation is true in general for matrices of any size. This means that that $A$ is singular if and only if $\\det A = 0$, a fact that we will use in our eigenvalue computations later.\n",
     "\n",
-    "A corollary of Fact 3, which we will use in our eigenvalue computations, is that $A$ is singular if and only if $\\det A = 0$.\n",
+    "5. If $U$ is a block upper diagonal matrix, i.e., if $U = \\bm U_{11} & U_{12} \\\\ 0 & U_{22}\\em$ for $U_{ij}$ of compatible dimension, then $\\det U = \\det{U_{11}} \\cdot\\det{U_{22}}$, i.e., the determinant of $U$ is given by the products of the determinants of its block diagonals.\n",
     "\n",
-    "4. If $U$ is a block upper diagonal matrix, i.e., if $U = \\bm U_{11} & U_{12} \\\\ 0 & U_{22}\\em$ for $U_{ij}$ of compatible dimension, then $\\det U = \\det{U_{11}} \\cdot\\det{U_{22}}$, i.e., the determinant of $U$ is given by the products of the determinants of its block diagonals.\n",
-    "\n",
-    "5. The determinant of a matrix is equal to the determinant of its transpose, $\\det A = \\det A^\\top$.\n",
+    "6. The determinant of a matrix is equal to the determinant of its transpose, $\\det A = \\det A^\\top$.\n",
     "\n",
     ":::\n",
     "\n",
-    "These facts are all we need for now to get started finding eigenvalues.\n",
+    "These facts (and more) are all derivable from a basic principles of the determinant, but, as with many other topics in mathematics, the rabbit hole goes incredibly deep. For the purpose of studying eigenvalues and eigenvectors this is all we need, but for sake of completeness we included the rest of this page as further information on determinants.\n",
     "\n",
     "## Optional: An Algebraic Definition of the Determinant\n",
     "\n",
-    "Other than for computing eigenvalues, we don't really spend much time working with determinants in this course. However, for interested students, we will give an algebraic definition of the determinant as well as some methods of finding the determinant of a matrix. This definition is taken from [these notes](https://public.websites.umich.edu/~willdana/Determinant%20Notes.pdf), which explain the connection between the geometric and algebraic interpretations of the determinant.\n",
+    "As mentioned above, we don't really spend much time working with determinants in this course aside from for computing eigenvalues/vectors. However, for interested students, we will give an algebraic definition of the determinant as well as some methods of finding the determinant of a matrix. This definition is taken from [these notes](https://public.websites.umich.edu/~willdana/Determinant%20Notes.pdf), which explain the connection between the geometric and algebraic interpretations of the determinant.\n",
     "\n",
     ":::{prf:definition} The Determinant of a Matrix\n",
     ":label: determinant-defn\n",
@@ -529,7 +529,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
