--- a/05_Ch_6_Eigenvalues_and_Eigenvectors/073-characteristic_equations.ipynb
+++ b/05_Ch_6_Eigenvalues_and_Eigenvectors/073-characteristic_equations.ipynb
@@ -56,18 +56,22 @@
    "source": [
     "# The Characteristic Equation \n",
     "\n",
-    "In the previous section, we showed that a square matrix $B$ is singular if and only if $\\det (B) = 0$. Combined with [this fact](#eigenvalue-thm), which states that a scalar $\\lambda$ is an eigenvalue of square matrix $A$ if and only if $A - \\lambda I$ was singular, this motivates the following characterization of eigenvalues:\n",
+    "In the previous section, we mentioned that a square matrix $B$ is singular if and only if $\\det (B) = 0$. Combined with [this fact](#eigenvalue-thm), which states that a scalar $\\lambda$ is an eigenvalue of square matrix $A$ if and only if $A - \\lambda I$ was singular, this motivates the following characterization of eigenvalues:\n",
     "\n",
     ":::{prf:definition} Characteristic Equation\n",
     ":label: characteristic-equation-defn\n",
     "\n",
-    "For a square matrix $A \\in \\mathbb{R}^n$, its *characteristic equation* is defined as the equation:\n",
+    "For a square matrix $A \\in \\mathbb{R}^{n \\times n}$, its *characteristic equation* is defined as the equation:\n",
     "\n",
     "\\begin{align*}\n",
     "    \\det(A - \\lambda I)= 0\n",
     "\\end{align*}\n",
     "\n",
-    "which has variable $\\lambda$. A scalar $\\lambda$ is an eigenvalue of $A$ if and only if $\\lambda$ is a solution to the characteristic equation of $A$.\n",
+    "which has a scalar variable $\\lambda$. The solutions $\\lambda_i$ that satisfy the equation are eigenvalues of $A$ because of the following equivalence which we have mentioned previously\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\det(A - \\lambda_i I)= 0 \\Leftrightarrow A - \\lambda_i I \\text{ is singular } \\Leftrightarrow \\lambda_i \\text{ is an eigenvalue}\n",
+    "\\end{align*}\n",
     "\n",
     "The characteristic equation is a $n^{\\text{th}}$-degree polynomial equation in terms of $\\lambda$. This can be seen by fully expanding the equation using the entries of $A$ (e.g., via the [Laplace expansion](#laplace-expansion-defn)).\n",
     ":::\n",
@@ -76,9 +80,9 @@
     "\n",
     "## Finding the Eigenvalues by Solving the Characteristic Equation\n",
     "\n",
-    "We now have all the pieces needed to find the eigenvalues for small matrices (which is all we will ever ask you to compute, unless there is a special structure). This leads to the following method for finding all [eigenvalue, eigenvector] pairs for a square matrix $A$:\n",
+    "We now have all the pieces needed to find the eigenvalues for $2\\times2$ matrices (which is all we will ever ask you to compute, unless there is a special structure). This leads to the following method for finding all eigenvalue/vector pairs for a square matrix $A$:\n",
     "\n",
-    "* First, we find all solutions $\\lambda$ to the characteristic equation $\\det(A - \\lambda)$ to get the eigenvalues.\n",
+    "* First, we find all solutions $\\lambda$ to the characteristic equation $\\det(A - \\lambda I)$ to get the eigenvalues.\n",
     "\n",
     "* Second, for each value of $\\lambda$, we find all solutions $\\vv v$ to the homogenous system $(A - \\lambda I)\\vv v = \\vv 0$ to get the eigenvectors for each eigenvalue.\n",
     "\n",
@@ -117,7 +121,7 @@
     "\n",
     ":::\n",
     "\n",
-    "In general, the characteristic equation cannot easily be factored because there is no formula to exactly compute the roots of any polynomial of degree 5 or higher. One way to get around this is to use root-finding algorithms such as Newton's method, but these may converge slowly or have numerical issues. In the next section, we'll introduce an algorithm based on the [QR decomposition](#qr-alg) which alleviates these issues.\n",
+    "In general, the characteristic equation cannot easily be factored because there is no formula to exactly compute the roots of any polynomial of degree 5 or higher. One way to get around this is to use root-finding algorithms such as [Newton's method](https://en.wikipedia.org/wiki/Newton%27s_method), but these may converge slowly or have numerical issues. In the next section, we'll introduce an algorithm based on the [QR decomposition](#qr-alg) which alleviates these issues.\n",
     "\n",
     "## Optional: Finding the Characteristic Equation\n",
     "\n",
@@ -238,7 +242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
