--- a/05_Ch_6_Eigenvalues_and_Eigenvectors/074-qr_algorithm.ipynb
+++ b/05_Ch_6_Eigenvalues_and_Eigenvectors/074-qr_algorithm.ipynb
@@ -224,13 +224,21 @@
     "\n",
     "## Approximating a Real Schur Decomposition\n",
     "\n",
-    "The question thus becomes, how do we find an approximate Schur decomposition for $A$? The core idea of the QR algorithm is to use an iterative procedure, which, under certain conditions, converges to a real Schur decomposition of $A$.\n",
+    "The question thus becomes, how do we find an approximate Schur decomposition for $A$? One idea is repeatedly apply the QR decomposition to iteratively find similar matrices to $A$. In the case that all eigenvalues are distinct, this actually converges to the Schur decomposition.\n",
     "\n",
-    "* First, we set $A_1 = A$.\n",
+    "1. Initialize:\n",
+    "   $$A_1 = A$$\n",
     "\n",
-    "* For $t = 1, 2, \\dots$, let $Q_t R_t = A_t$, with $Q_t$ orthogonal and $R_t$ upper triangular, and define $A_{t + 1} = R_t Q_t = Q_t^\\top A_t Q_t$. In other words, we compute a QR-factorization of $A_t$, and reverse the factors to get $A_{t + 1}$.\n",
+    "2. For $t = 1, 2, \\dots$, perform the following steps:\n",
     "\n",
-    "The proof is again out of the scope of this course, but this procedure converges (in the sense that $A_t$ converges to a quasi-upper triangular matrix as $t\\to \\infty$) under the assumption that the absolute eigenvalues of $A$ are all distinct. We note that there are more advanced procedures which can get around this assumption, but this basic form of the algorithm highlights the most important ideas.\n",
+    "   a. Compute the QR-factorization of $A_t$:\n",
+    "      $$Q_t R_t = A_t$$\n",
+    "      where $Q_t$ is orthogonal and $R_t$ is upper triangular.\n",
+    "\n",
+    "   b. Define $A_{t+1}$ by reversing the factors:\n",
+    "      $$A_{t+1} = R_t Q_t = (Q_t^\\top A_t) Q_t$$\n",
+    "\n",
+    "The mechanism of why this algorithm works can be described by two phenomena. First, each subsequent $A_{t+1}$ is similar to the previous $A_t$ so we know that eigenvalues are preserved over each iteration. Second, in each interation the elements below the diagonal get smaller and vice versa for those above (showing why this property holds is beyond the scope of this course). This means that over many iterations the elements below the diagonal effectively become 0, making $A_\\infty$ a upper-triangular matrix.\n",
     "\n",
     "# Pseudocode for the QR Algorithm\n",
     "\n",
@@ -353,7 +361,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
