--- a/05_Ch_6_Eigenvalues_and_Eigenvectors/076-repeated_complex_eigenvalues.ipynb
+++ b/05_Ch_6_Eigenvalues_and_Eigenvectors/076-repeated_complex_eigenvalues.ipynb
@@ -131,7 +131,7 @@
     "\n",
     "A couple of observations about the example above:\n",
     "\n",
-    "* $\\lambda_1$ and $\\lambda_2$ are *complex conjugates*, i.e., $\\lambda_-1 = \\bar{\\lambda_2}$, as are $\\vv{v_1}$ and $\\vv{v_2}$. This is a general fact about *real* matrices:\n",
+    "* $\\lambda_1$ and $\\lambda_2$ are *complex conjugates*, i.e., $\\lambda_{-1} = \\overline{\\lambda_2}$, as are $\\vv{v_1}$ and $\\vv{v_2}$. This is a general fact about *real* matrices:\n",
     "\n",
     ":::{prf:theorem} Complex eigenvalues of real matrice occur in conjugate pairs\n",
     ":label: complex-eigenvalue-thm\n",
@@ -173,7 +173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
