--- a/05_Ch_6_Eigenvalues_and_Eigenvectors/078-linear_odes.ipynb
+++ b/05_Ch_6_Eigenvalues_and_Eigenvectors/078-linear_odes.ipynb
@@ -57,7 +57,7 @@
    "source": [
     "# Linear Dynamical Systems\n",
     "\n",
-    "A *dynamical system* refers to the differential equations governing the change of a system over time. This system can be mechanical, electrical, fluid, biologiacl, financial, or even social. In this page, we will learn how to solve special differential equations describing *linear dynamical systems*. We will draw heavily on the concepts of eigenvalues and eigenvectors covered in the previous pages.\n",
+    "A *dynamical system* refers to the differential equations governing the change of a system over time. This system can be mechanical, electrical, fluid, biological, financial, or even social. In this page, we will learn how to solve special differential equations describing *linear dynamical systems*. We will draw heavily on the concepts of eigenvalues and eigenvectors covered in the previous pages.\n",
     "\n",
     "## Scalar Ordinary Differential Equations\n",
     "\n",
