--- a/05_Ch_6_Eigenvalues_and_Eigenvectors/075-eigenspaces.ipynb
+++ b/05_Ch_6_Eigenvalues_and_Eigenvectors/075-eigenspaces.ipynb
@@ -117,7 +117,7 @@
     "\n",
     ":::\n",
     "\n",
-    "This description gives us a very important connection between zero eigenvalues and the invertibility of a matrix $A$:\n",
+    "This description also gives us a very important connection between zero eigenvalues and the invertibility of a matrix $A$:\n",
     "\n",
     ":::{prf:theorem} Zero eigenvalues and invertbility\n",
     ":label: eigenspace-defn\n",
@@ -143,7 +143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
