--- a/05_Ch_6_Eigenvalues_and_Eigenvectors/077-diagonalization.ipynb
+++ b/05_Ch_6_Eigenvalues_and_Eigenvectors/077-diagonalization.ipynb
@@ -200,7 +200,9 @@
     "\n",
     "Let's see what happens if we express $A$ in coordinate system defined by the [eigenbasis](#eigenbasis-defn) $V = \\bm \\vv{v_1} & \\vv{v_2} \\em = \\bm 1&1\\\\-1&-2\\em$.\n",
     "\n",
-    "First, we compute $V^{-1} = \\frac{1}{1(-2) - 1(-1)}\\bm -2&-1 \\\\1&1\\em = \\bm 2&1\\\\-1&-1\\em$, and then find $V^{-1}AV = \\bm 2&1\\\\-1&-1\\em \\bm 1&-1 \\\\2&4\\em \\bm 1&1\\\\-1&-2\\em = \\bm 2&0\\\\0&3\\em$.\n",
+    "First, we compute $V^{-1} = \\frac{1}{1(-2) - 1(-1)}\\bm -2&-1 \\\\1&1\\em = \\bm 2&1\\\\-1&-1\\em$, \n",
+    "\n",
+    "and then find $V^{-1}AV = \\bm 2&1\\\\-1&-1\\em \\bm 1&-1 \\\\2&4\\em \\bm 1&1\\\\-1&-2\\em = \\bm 2&0\\\\0&3\\em$.\n",
     "\n",
     "This matrix is diagonal! THis means it applies a simple stretching action in the coordinates defined by the eigenvectors. The eigenvalues for this new matrix are also $\\lambda_1 = 2$ and $\\lambda_2 = 3$, but in this case, eigenvectors are much simpler: $\\vv{\\hat{v_1}} = \\bm 1\\\\0\\em$ and $\\vv{\\hat{v_2}} = \\bm 0\\\\1\\em$.\n",
     ":::\n",
@@ -384,7 +386,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
